[package]
name = "spark_gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
chrono = "0.4.31"
ring = "0.17.4"
serde_json = "1.0.107"
tungstenite = { version = "0.20.1", features = ["native-tls"] }
url = "2.4.1"
